--- a/style.css
+++ b/style.css
@@ -1,87 +1,42 @@
-body{
-    background-color: #000;
-  }
-  
-  #header {
-    text-align: center;
-    display: inline;
-  }
-  
-  h1{
-    position:relative;
-    color:#fff;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    font-size: 2em;
-    letter-spacing: 4px;
-    overflow: hidden;
-    background: linear-gradient(90deg,#000,#fff,#000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    -webkit-background-clip:text;
-    -webkit-text-fill-color:rgba(255,25,255,0);
-    animation:shining 3s linear infinite;
-  }
-  @keyframes shining
-  {
-    0%
-    {
-      background-position: -500%
-    }
-    100%
-    {
-      background-position: 500%;
-    }
-  }
-  
-  nav {
-    width: 50%;
-    position: absolute;
-    top: 20%; left: 55%;
-    transform: translate(-50%,-50%);
-  }
-  
-  ul {
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    list-Style: none;
-  }
-  
-  li {
-    margin-top: 20px;
-  }
-  
-  a {
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: helvetica;
-    display: inline-block;
-    padding: 16px 32px;
-    background-image: linear-gradient(120deg, transparent 50%, white 50%);
-    background-size: 250%;
-    transition: all 0.4s;
-    letter spacing: 2px;
-    font-size: 21px;
-  }
-  
-  li:hover a {
-    background-position: 100%;
-    color: #313131;
-    transform: translateX(16px);
-  }
-  
-  #form {
-    text-align: right;
-  }
-  
-  #welcome {
-    color:red;
-  }
-  
-  #clip {
-    margin-top: 50px;
-    display: flex;
+* {
+  box-sizing: border-box;
+}
+
+#products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border: right;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  }
+  align-items: center;
+  margin-bottom: 50px;
+  font-family: arial;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
+}
