--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@
   box-sizing: border-box;
 }
 
+#logo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+li a {
+  display: block;
+  padding: 16px;
+}
+
+#nav-bar {
+  margin-right: 5%;
+}
+
 #products {
   display: flex;
   flex-wrap: wrap;
